--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,3 +23,13 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+.inner-box{
+  //text-align: center;
+  width: 100vw;
+  padding: 12px;
+  padding-left: 150px;
+  padding-right: 150px;
+  //color: white;
+}
+
