--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -80,6 +80,13 @@ $warning: #f2c037;
   background-color: #10348e;
   color: #d8c8b8;
 }
+.bg-index-r {
+  background-color: #d8c8b8;
+  color: #10348e;
+}
+.bg-index-font{
+  color: #10348e;
+}
 // .bg-detect {
 //   background-color: #134f2c; /* 为/detect路由指定的颜色 */
 //   color: #dcd3b8;
