新闻背景色

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -77,15 +77,15 @@ $warning: #f2c037;
   color: white;
 }
 .bg-index {
-  background-color: #10348e;
-  color: #d8c8b8;
+  background-color: #4b577e;
+  color: #f4e2c3;
 }
 .bg-index-r {
   background-color: #d8c8b8;
   color: #10348e;
 }
 .bg-index-font{
-  color: #10348e;
+  color: #4b577e;
 }
 // .bg-detect {
 //   background-color: #134f2c; /* 为/detect路由指定的颜色 */
